--- a/PocketChef/wear/src/main/res/layout/activity_main.xml
+++ b/PocketChef/wear/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_world"
-        app:layout_box="all" />
+        app:layout_box="all"
+        />
 
     <TextView
         android:id="@+id/clock"
