--- a/PocketChef/wear/src/main/res/layout/activity_main.xml
+++ b/PocketChef/wear/src/main/res/layout/activity_main.xml
@@ -10,12 +10,15 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/hello_world"
         app:layout_box="all"
         />
-
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></ListView>
     <TextView
         android:id="@+id/clock"
         android:layout_width="wrap_content"
@@ -23,5 +26,4 @@
         android:layout_gravity="bottom|start"
         android:textColor="@android:color/white"
         app:layout_box="all" />
-
 </android.support.wearable.view.BoxInsetLayout>
