--- a/PocketChef/wear/src/main/res/layout/activity_main.xml
+++ b/PocketChef/wear/src/main/res/layout/activity_main.xml
@@ -30,14 +30,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+<ListView
+    android:id="@+id/list"
+    android:layout_width="match_parent"
+    android:layout_height="400dp">
 
-    <TextView
-        android:id="@+id/clock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
-        android:textColor="@android:color/white"
-        app:layout_box="all" />
+
+</ListView>
 </ScrollView>
 </LinearLayout>
 
