--- a/PocketChef/wear/src/main/res/layout/activity_main.xml
+++ b/PocketChef/wear/src/main/res/layout/activity_main.xml
@@ -30,13 +30,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-<ListView
-    android:id="@+id/list"
-    android:layout_width="match_parent"
-    android:layout_height="400dp">
-
-
-</ListView>
+        <TextView
+            android:id="@+id/recipe"
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:maxLines="100"
+            android:gravity="center_horizontal"
+            />
 </ScrollView>
 </LinearLayout>
 
